# pibou-filings

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  demo.ipynb  local_library_call_demo.ipynb  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql.yml  publish-to-pypi.yml  tests.yml
piboufilings/: __init__.py  _version.py
piboufilings/config/: __init__.py  settings.py
piboufilings/core/: __init__.py  downloader.py  logger.py  rate_limiter.py
piboufilings/parsers/: form_13f_parser.py  form_nport_parser.py  form_sec16_parser.py  parser_utils.py
piboufilings/storage/: __init__.py  base.py  csv_backend.py  duckdb_backend.py
tests/: test_13f_nport_integration.py  test_cleanup_raw_files.py  test_downloader_http.py  test_get_filings_orchestrator.py  test_logger.py  test_parsers_unit.py  test_rate_limiter.py  test_resume.py  test_section16_parser.py  test_storage_backends.py  test_time_boundaries.py  test_xml_security.py
